affidexlab/new/contracts/base_deploy.log

WARNING: You are using Node.js 20.12.1 which is not supported by Hardhat.
Please upgrade to 22.10.0 or a later LTS version (even major version number)


An unexpected error occurred:

file:///project/workspace/affidexlab/new/affidexlab/new/contracts/deploy_router.js:2
import { ethers } from "hardhat";
         ^^^^^^
SyntaxError: The requested module 'hardhat' does not provide an export named 'ethers'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:134:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:217:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:323:24)
    at runScriptWithHardhat (/project/workspace/affidexlab/new/affidexlab/new/contracts/node_modules/hardhat/dist/src/internal/builtin-plugins/run/task-action.js:14:5)
    at async Promise.all (index 0)
    at main (/project/workspace/affidexlab/new/affidexlab/new/contracts/node_modules/hardhat/src/internal/cli/main.ts:220:5)
    at async file:///project/workspace/affidexlab/new/affidexlab/new/contracts/node_modules/hardhat/dist/src/cli.js:21:1

If you think this is a bug in Hardhat, please report it here: https://hardhat.org/report-bug
